--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
             <img src="./images/Group 18.png" alt="">
         </div>
     </section>
+
+
+    <section class="online-games">
+        <h1>Online Games <span style="color: blueviolet;">Funny Videos</span></h1>
+        <small>A Collection of Hilarious Videos to Brighten Your Day</small>
+        <div class="game-container">
+            <div><img src="./images/Rectangle 4.png" alt="">
+            <p>No Download. No Installs. Play <br> games Instantly on Gamer.</p></div>
+            <div><img src="./images/Rectangle 5.png" alt="">
+            <p>Did you score? #unblockedgames <br> #school</p></div>
+            <div><img src="./images/Rectangle 7.png" alt="">
+            <p>Breaking game records <br> like OG</p></div>
+            <div><img src="./images/Rectangle 6.png" alt="">
+            <p>Busted gaming on school laptop, <br> but you are still lit.</p></div>
+        </div>
+    </section>
     
 </body>
 </html>
