--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         </div>
     </section>
 
+    <main>
+
 
     <section class="online-games">
         <h1>Online Games <span style="color: blueviolet;">Funny Videos</span></h1>
@@ -56,6 +58,93 @@
             <p>Busted gaming on school laptop, <br> but you are still lit.</p></div>
         </div>
     </section>
-    
+
+    <section class="play-section">
+       <div class="play-container">
+        <div class="play-text">
+            <h1><span style="color:  #F948B2;;">Play Instantly,</span> <br>
+                No Downloads <br>
+                No Installs.</h1>
+                <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+        </div>
+        <div class="play-img">
+            <img class="play-img-1" src="./images/Rectangle 66.png" alt="">
+            <img class="play-img-2" src="./images/Rectangle 55.png" alt="">
+        </div>
+       </div>
+    </section>
+
+    <section class="games">
+        <div class="games-div">
+            <img src="./images/Rectangle 11.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 12.png" alt="">
+            <p>Adventure Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 13.png" alt="">
+            <p>Arcade Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 14.png" alt="">
+            <p>Educational Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 15.png" alt="">
+            <p>Word Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 16.png" alt="">
+            <p>Role Palying Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 17.png" alt="">
+            <p>Music & Audio Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 18.png" alt="">
+            <p>Puzzle Games</p>
+        </div>
+        <div class="games-div">
+            <img src="./images/Rectangle 19.png" alt="">
+            <p>Strategy Games</p>
+        </div>
+       
+    </section>
+</main>
+
+<footer class="footer">
+    <div class="footer-banner">
+        <img src="./images/Frame.png" alt="">
+        <h1><span style="color: #F948B2;">G</span>amer</h1>
+    </div>
+    <div class="story-p">
+        <p>Our Story</p>
+        <p>Games</p>
+        <p>Web Games</p>
+        <p>Careers</p>
+        <p>Support</p>
+        <p>My Account</p>
+    </div>
+    <div class="icons">
+        <span><i style="color: white;" class="fa-brands fa-twitter"></i></span>
+        <span><i style="color: white;" class="fa-brands fa-facebook"></i></span>
+        <span><i style="color: white;" class="fa-brands fa-youtube"></i></span>
+        <span><i style="color: white;" class="fa-brands fa-linkedin"></i></span>
+        <span><i style="color: white;" class="fa-brands fa-instagram"></i></span>
+        <span><i style="color: white;" class="fa-brands fa-apple"></i></span>
+    </div>
+    <div class="term">
+        <small>Terms and Conditions</small>
+        <small>Privacy Policy</small>
+        <small>Cookie Policy</small>
+        <small>Privacy Settings</small>
+    </div>
+    <div class="copyright">
+        <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
+    </div>
+</footer>
 </body>
 </html>
