--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
+    <link rel="shortcut icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
     <header>
@@ -18,22 +23,23 @@
             <div class="nav-text">
                 <p>About us</p>
                 <p>Developers</p>
-                <p class="nav-p">Follow us on <i class="fa-brands fa-youtube" style="color: red;"></i> <i class="fa-brands fa-tiktok"></i></p>
+                <p class="nav-p">Follow us on <i class="fa-brands fa-youtube" style="color: red;"></i> <i
+                        class="fa-brands fa-tiktok"></i></p>
             </div>
         </nav>
     </header>
-    
+
 
     <section class="banner-section">
         <div class="banner-text">
             <div class="banner-text-container">
                 <h2>PLAY LIKE THE</h2>
-            <h1>G.O.A.T.</h1>
-            <p><i class="fa-regular fa-circle-play" style="color: #FF42A5;"></i> 1-click instatnt play</p>
-            <p><i class="fa-solid fa-download" style="color: #FF42A5;"></i> No Download</p>
-            <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
-            <button class="btn-1">Sign in</button>
-            <button class="btn-2">Go Rogue</button>
+                <h1>G.O.A.T.</h1>
+                <p><i class="fa-regular fa-circle-play" style="color: #FF42A5;"></i> 1-click instatnt play</p>
+                <p><i class="fa-solid fa-download" style="color: #FF42A5;"></i> No Download</p>
+                <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                <button class="btn-1">Sign in</button>
+                <button class="btn-2">Go Rogue</button>
             </div>
         </div>
         <div class="banner-img">
@@ -44,107 +50,116 @@
     <main>
 
 
-    <section class="online-games">
-        <h1>Online Games <span style="color: blueviolet;">Funny Videos</span></h1>
-        <small>A Collection of Hilarious Videos to Brighten Your Day</small>
-        <div class="game-container">
-            <div><img src="./images/Rectangle 4.png" alt="">
-            <p>No Download. No Installs. Play <br> games Instantly on Gamer.</p></div>
-            <div><img src="./images/Rectangle 5.png" alt="">
-            <p>Did you score? #unblockedgames <br> #school</p></div>
-            <div><img src="./images/Rectangle 7.png" alt="">
-            <p>Breaking game records <br> like OG</p></div>
-            <div><img src="./images/Rectangle 6.png" alt="">
-            <p>Busted gaming on school laptop, <br> but you are still lit.</p></div>
-        </div>
-    </section>
+        <section class="online-games">
+            <h1>Online Games <span style="color: blueviolet;">Funny Videos</span></h1>
+            <small>A Collection of Hilarious Videos to Brighten Your Day</small>
+            <div class="game-container">
+                <div class="watch-now">
+                    <div><img src="./images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play <br> games Instantly on Gamer.</p>
+                </div>
+                <div class="watch"><p> <span>watch now</span> <i class="fa-brands fa-youtube"></i></p></div>
+            </div>
+                <div><img src="./images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames <br> #school</p>
+                </div>
+                <div><img src="./images/Rectangle 7.png" alt="">
+                    <p>Breaking game records <br> like OG</p>
+                </div>
+                <div><img src="./images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, <br> but you are still lit.</p>
+                </div>
+            </div>
+        </section>
 
-    <section class="play-section">
-       <div class="play-container">
-        <div class="play-text">
-            <h1><span style="color:  #F948B2;;">Play Instantly,</span> <br>
-                No Downloads <br>
-                No Installs.</h1>
-                <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
-        </div>
-        <div class="play-img">
-            <img class="play-img-1" src="./images/Rectangle 66.png" alt="">
-            <img class="play-img-2" src="./images/Rectangle 55.png" alt="">
-        </div>
-       </div>
-    </section>
+        <section class="play-section">
+            <div class="play-container">
+                <div class="play-text">
+                    <h1><span style="color:  #F948B2;;">Play Instantly,</span> <br>
+                        No Downloads <br>
+                        No Installs.</h1>
+                    <p>Play games online for free without <br> downloading. Just click the Play button <br> and play
+                        instantly in your browser.</p>
+                </div>
+                <div class="play-img">
+                    <img class="play-img-1" src="./images/Rectangle 66.png" alt="">
+                    <img class="play-img-2" src="./images/Rectangle 55.png" alt="">
+                </div>
+            </div>
+        </section>
 
-    <section class="games">
-        <div class="games-div">
-            <img src="./images/Rectangle 11.png" alt="">
-            <p>Action Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 12.png" alt="">
-            <p>Adventure Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 13.png" alt="">
-            <p>Arcade Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 14.png" alt="">
-            <p>Educational Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 15.png" alt="">
-            <p>Word Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 16.png" alt="">
-            <p>Role Palying Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 17.png" alt="">
-            <p>Music & Audio Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 18.png" alt="">
-            <p>Puzzle Games</p>
-        </div>
-        <div class="games-div">
-            <img src="./images/Rectangle 19.png" alt="">
-            <p>Strategy Games</p>
-        </div>
-       
-    </section>
-</main>
+        <section class="games">
+            <div class="games-div">
+                <img src="./images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 16.png" alt="">
+                <p>Role Palying Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div class="games-div">
+                <img src="./images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
+            </div>
 
-<footer class="footer">
-    <div class="footer-banner">
-        <img src="./images/Frame.png" alt="">
-        <h1><span style="color: #F948B2;">G</span>amer</h1>
-    </div>
-    <div class="story-p">
-        <p>Our Story</p>
-        <p>Games</p>
-        <p>Web Games</p>
-        <p>Careers</p>
-        <p>Support</p>
-        <p>My Account</p>
-    </div>
-    <div class="icons">
-        <span><i style="color: white;" class="fa-brands fa-twitter"></i></span>
-        <span><i style="color: white;" class="fa-brands fa-facebook"></i></span>
-        <span><i style="color: white;" class="fa-brands fa-youtube"></i></span>
-        <span><i style="color: white;" class="fa-brands fa-linkedin"></i></span>
-        <span><i style="color: white;" class="fa-brands fa-instagram"></i></span>
-        <span><i style="color: white;" class="fa-brands fa-apple"></i></span>
-    </div>
-    <div class="term">
-        <small>Terms and Conditions</small>
-        <small>Privacy Policy</small>
-        <small>Cookie Policy</small>
-        <small>Privacy Settings</small>
-    </div>
-    <div class="copyright">
-        <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
-    </div>
-</footer>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-banner">
+            <img src="./images/Frame.png" alt="">
+            <h1><span style="color: #F948B2;">G</span>amer</h1>
+        </div>
+        <div class="story-p">
+            <p>Our Story</p>
+            <p>Games</p>
+            <p>Web Games</p>
+            <p>Careers</p>
+            <p>Support</p>
+            <p>My Account</p>
+        </div>
+        <div class="icons">
+            <span><i style="color: white;" class="fa-brands fa-twitter"></i></span>
+            <span><i style="color: white;" class="fa-brands fa-facebook"></i></span>
+            <span><i style="color: white;" class="fa-brands fa-youtube"></i></span>
+            <span><i style="color: white;" class="fa-brands fa-linkedin"></i></span>
+            <span><i style="color: white;" class="fa-brands fa-instagram"></i></span>
+            <span><i style="color: white;" class="fa-brands fa-apple"></i></span>
+        </div>
+        <div class="term">
+            <small>Terms and Conditions</small>
+            <small>Privacy Policy</small>
+            <small>Cookie Policy</small>
+            <small>Privacy Settings</small>
+        </div>
+        <div class="copyright">
+            <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
+        </div>
+    </footer>
 </body>
+
 </html>
