--- a/index.html
+++ b/index.html
@@ -60,15 +60,23 @@
                 </div>
                 <div class="watch"><p> <span>watch now</span> <i class="fa-brands fa-youtube"></i></p></div>
             </div>
-                <div><img src="./images/Rectangle 5.png" alt="">
+                <div class="watch-now"><div><img src="./images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames <br> #school</p>
                 </div>
-                <div><img src="./images/Rectangle 7.png" alt="">
-                    <p>Breaking game records <br> like OG</p>
+                <div class="watch"><p> <span>watch now</span> <i class="fa-brands fa-youtube"></i></p></div>
+            </div>
+                <div class="watch-now">
+                    <div><img src="./images/Rectangle 7.png" alt="">
+                        <p>Breaking game records <br> like OG</p>
+                    </div>
+                    <div class="watch"><p> <span>watch now</span> <i class="fa-brands fa-youtube"></i></p></div>
                 </div>
+               <div class="watch-now">
                 <div><img src="./images/Rectangle 6.png" alt="">
                     <p>Busted gaming on school laptop, <br> but you are still lit.</p>
                 </div>
+                <div class="watch"><p> <span>watch now</span> <i class="fa-brands fa-youtube"></i></p></div>
+               </div>
             </div>
         </section>
 
